--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "dependencies": {
     "body-parser": "latest",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
