--- a/package.json
+++ b/package.json
@@ -22,17 +22,23 @@
   "homepage": "https://github.com/Myrendir/RESTful_API_IOT#readme",
   "devDependencies": {
     "bcrypt": "^3.0.7",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
     "body-parser": "latest",
+    "cancan": "^3.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.8.10",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
