--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "homepage": "https://github.com/Myrendir/RESTful_API_IOT#readme",
   "devDependencies": {
     "bcrypt": "^3.0.7",
+    "config": "^3.2.5",
+    "config.json": "0.0.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "latest",
     "cancan": "^3.1.0",
     "dotenv": "^8.2.0",
@@ -39,6 +43,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "rootpath": "^0.1.2"
   }
 }
