--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "plotly": "^1.0.6",
     "rootpath": "^0.1.2"
   }
 }
