--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.5",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "passport-http-bearer": "^1.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -42,6 +43,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-http-custom-bearer": "^1.0.15",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "plotly": "^1.0.6",
