--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Third project API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -27,11 +27,13 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express-jwt": "^5.3.1",
+    "jest": "^25.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "passport-http-bearer": "^1.0.1"
   },
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "latest",
     "cancan": "^3.1.0",
